--- a/Earthquakes/A2_BD2.ipynb
+++ b/Earthquakes/A2_BD2.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 284,
+      "execution_count": 1,
       "metadata": {
         "id": "b6nq6T1ZwODv"
       },
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 285,
+      "execution_count": 2,
       "metadata": {
         "id": "cvAvFk0wwODw"
       },
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 286,
+      "execution_count": 3,
       "metadata": {
         "id": "pg4igY5BwODy"
       },
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 287,
+      "execution_count": 4,
       "metadata": {
         "id": "DB22iAW8wODy",
         "outputId": "368487d1-b9bb-4633-abdb-3e650ea7cf0d"
@@ -208,7 +208,7 @@
               "4  16.122  1990-01-01 01:03:44.490000+00:00  "
             ]
           },
-          "execution_count": 287,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -219,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 288,
+      "execution_count": 5,
       "metadata": {
         "id": "eQD88nTowODz",
         "outputId": "1af0c99d-1ef0-4ecb-e3d9-dc0d81eeaa91"
@@ -363,7 +363,7 @@
               "3445750  57.564800  250.000  2023-07-29 11:08:57.884000+00:00  "
             ]
           },
-          "execution_count": 288,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -374,7 +374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 289,
+      "execution_count": 6,
       "metadata": {
         "id": "SkRljDnuwODz",
         "outputId": "58c34b58-d07b-4eaa-d87b-4a76a1e72792"
@@ -386,7 +386,7 @@
               "(3445751, 12)"
             ]
           },
-          "execution_count": 289,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -397,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 290,
+      "execution_count": 7,
       "metadata": {
         "id": "Yq78du76wODz",
         "outputId": "3d8fd5b5-6ae3-49f7-e4d2-beeccf01f21e"
@@ -411,7 +411,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 290,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -422,7 +422,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 291,
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Index                128\n",
+              "time            27566008\n",
+              "place           27566008\n",
+              "status          27566008\n",
+              "tsunami         27566008\n",
+              "significance    27566008\n",
+              "data_type       27566008\n",
+              "magnitudo       27566008\n",
+              "state           27566008\n",
+              "longitude       27566008\n",
+              "latitude        27566008\n",
+              "depth           27566008\n",
+              "date            27566008\n",
+              "dtype: int64"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "terremotos.memory_usage()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
         "id": "gfwlN84QwODz",
         "outputId": "11dc323d-8d69-4187-bd12-353f0e66e44c"
@@ -446,7 +479,7 @@
               "dtype: object"
             ]
           },
-          "execution_count": 291,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -457,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 292,
+      "execution_count": 10,
       "metadata": {
         "id": "1ymMsfGqwODz",
         "outputId": "6a531581-826b-493f-d5c9-b1b7c34fa16c"
@@ -481,7 +514,7 @@
               "dtype: object"
             ]
           },
-          "execution_count": 292,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -493,7 +526,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 293,
+      "execution_count": 11,
       "metadata": {
         "id": "TU0-Y9GEwODz",
         "outputId": "0f27fce0-bb27-4620-be1e-219160b863f4"
@@ -563,7 +596,7 @@
               "4 1990-01-01  1990"
             ]
           },
-          "execution_count": 293,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -575,7 +608,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 294,
+      "execution_count": 12,
       "metadata": {
         "id": "Ui0KeeqwwOD0",
         "outputId": "a35531dc-1df6-457c-a69a-3bca31f1d37c"
@@ -600,7 +633,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 294,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -611,7 +644,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 295,
+      "execution_count": 13,
       "metadata": {
         "id": "ypruqi3YwOD0",
         "outputId": "7614c83b-5318-4905-8814-f4cec1a4db4c"
@@ -772,7 +805,7 @@
               "std    2.041577e+01  5.484938e+01                            NaN  9.437871e+00  "
             ]
           },
-          "execution_count": 295,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -783,7 +816,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 296,
+      "execution_count": 14,
       "metadata": {
         "id": "zWiCRCrqwOD0",
         "outputId": "03333026-b9a3-429a-8493-5dc6daa82568"
@@ -959,7 +992,7 @@
               "year                       2023.0             9.437871  "
             ]
           },
-          "execution_count": 296,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -970,7 +1003,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 297,
+      "execution_count": 15,
       "metadata": {
         "id": "To98rSDgwOD0",
         "outputId": "1dbd8c33-c036-4799-a3e5-34dd8c3e7f66"
@@ -1077,7 +1110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 298,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1086,7 +1119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 299,
+      "execution_count": 17,
       "metadata": {
         "id": "DnAYae7rwOD0",
         "outputId": "75989229-490f-4fdf-aadd-25225e7bec87"
@@ -1100,7 +1133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 300,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -1198,7 +1231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 301,
+      "execution_count": 19,
       "metadata": {
         "id": "Alo1Lb0dwOD0",
         "outputId": "0b532d2d-05fc-457e-ef4c-d421204fa3fc"
@@ -1237,7 +1270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 302,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -1259,7 +1292,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 302,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1270,7 +1303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 303,
+      "execution_count": 21,
       "metadata": {
         "id": "RtaFw7XJwOD0",
         "outputId": "b6ab5b04-4c02-47a9-891b-fbac344cca35"
@@ -1358,7 +1391,7 @@
               "depth         0.031901  0.009602      0.363232   0.356990  1.000000"
             ]
           },
-          "execution_count": 303,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1369,7 +1402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 304,
+      "execution_count": 22,
       "metadata": {
         "id": "9lNmn0AZwOD0",
         "outputId": "2f25b0fb-5729-4d88-a35b-c9ef547caf26"
@@ -1402,7 +1435,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 305,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -1423,7 +1456,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 306,
+      "execution_count": 24,
       "metadata": {
         "id": "P8sDiKcFwOD1",
         "outputId": "9a89dade-3b38-4307-91d5-1596df203de1"
@@ -1489,7 +1522,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 307,
+      "execution_count": 25,
       "metadata": {
         "id": "LokRu6LswOD1",
         "outputId": "1a68997b-315c-4edc-b7ca-821a6a78a1a7"
@@ -1560,7 +1593,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 308,
+      "execution_count": 26,
       "metadata": {
         "id": "SR_M-IACwOD1",
         "outputId": "4552551e-bccb-4548-a084-be7cfc47db11"
@@ -1596,7 +1629,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 309,
+      "execution_count": 27,
       "metadata": {
         "id": "zbP0cxWawOD1",
         "outputId": "be91c6b0-73c5-446b-ce9c-8167e4f96af3"
@@ -1620,7 +1653,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 310,
+      "execution_count": 28,
       "metadata": {
         "id": "emqwm__HwOD1",
         "outputId": "c96905a2-31dd-4eaa-8109-533ecf5d3d2e"
@@ -1644,7 +1677,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 311,
+      "execution_count": 29,
       "metadata": {
         "id": "ycBdgsW7wOD1",
         "outputId": "bfcec799-6e78-4d81-c384-a4c42c26e022"
@@ -1668,7 +1701,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 312,
+      "execution_count": 30,
       "metadata": {
         "id": "QN2z1hq7wOD1",
         "outputId": "609d972c-1001-4c97-90fa-08a365355b25"
@@ -1692,7 +1725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 313,
+      "execution_count": 31,
       "metadata": {
         "id": "QNlhrxVywOD1",
         "outputId": "dfba4512-f370-43f0-c814-b5e1515a85aa"
@@ -1716,7 +1749,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 314,
+      "execution_count": 32,
       "metadata": {
         "id": "BQnZmF-YwOD1",
         "outputId": "29495f34-16e0-4567-b4c5-e180f4f414cc"
@@ -1743,7 +1776,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 315,
+      "execution_count": 33,
       "metadata": {
         "id": "nCxRfjBywOD1",
         "outputId": "fdc9f75a-3518-4d99-a4ad-6fc65d933092"
@@ -1770,7 +1803,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 316,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
@@ -1795,7 +1828,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 317,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
@@ -1817,7 +1850,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 318,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [
         {
@@ -1841,7 +1874,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 319,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
@@ -1865,7 +1898,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 320,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [
         {
@@ -1890,7 +1923,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 321,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [
         {
@@ -1923,7 +1956,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 322,
+      "execution_count": 40,
       "metadata": {
         "id": "2lZ358NWwOD2"
       },
@@ -1937,7 +1970,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 323,
+      "execution_count": 41,
       "metadata": {
         "id": "XA0yK3mpwOD2",
         "outputId": "36778fa3-b785-41ea-c09e-1d9c4201dc99"
@@ -13889,7 +13922,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 324,
+      "execution_count": 42,
       "metadata": {
         "id": "_xU1U_dNwOD2"
       },
@@ -13952,7 +13985,7 @@
               "depth         2.284278e+01  4.785911e+01"
             ]
           },
-          "execution_count": 324,
+          "execution_count": 42,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -13963,7 +13996,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 325,
+      "execution_count": 43,
       "metadata": {
         "id": "5Bo0ZjcWwOD3"
       },
@@ -14059,7 +14092,7 @@
               "quarry blast      1.129240e+12  0.000000     38.095381   1.525175  -0.513832"
             ]
           },
-          "execution_count": 325,
+          "execution_count": 43,
           "metadata": {},
           "output_type": "execute_result"
         }
